@@ -1,3 +1,8 @@
+2010-08-25  smeghead <smeghead@users.sourceforge.jp>
+
+	* fixed a bug that date label of burndown chart are all same date.
+	use localtime_r function instead of localtime.
+
 2010-08-23  smeghead <smeghead@users.sourceforge.jp>
 
 	* fixed a bug that date label of burndown chart are all same date.
